force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <label>클레임</label>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>