force-app/main/default/objects/Claim__c/fields/ClaimReason__c.field-meta.xml
<CustomField>
    <fullName>ClaimReason__c</fullName>
    <label>Claim Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>