force-app/main/default/objects/Claim__c/fields/ClaimReasonType__c.field-meta.xml
<CustomField>
    <fullName>ClaimReasonType__c</fullName>
    <label>Claim Reason Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>