force-app/main/default/objects/Claim__c/fields/ClaimType__c.field-meta.xml
<CustomField>
    <fullName>ClaimType__c</fullName>
    <label>Claim Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Warranty Authorization</fullName>
            </value>
            <value>
                <fullName>Warranty Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>