force-app/main/default/objects/Claim__c/fields/FilnalizedDate__c.field-meta.xml
<CustomField>
    <fullName>FilnalizedDate__c</fullName>
    <label>Filnalized Date</label>
    <type>DateTime</type>
</CustomField>