force-app/main/default/objects/Claim__c/fields/FnolChannel__c.field-meta.xml
<CustomField>
    <fullName>FnolChannel__c</fullName>
    <label>Fnol Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Phone;Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>