force-app/main/default/objects/Claim__c/fields/RelatedClaimId__c.field-meta.xml
<CustomField>
    <fullName>RelatedClaimId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Claim Id</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claim</relationshipLabel>
    <relationshipName>Claim</relationshipName>
    <type>Lookup</type>
</CustomField>