force-app/main/default/objects/Claim__c/fields/Total_Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjusted_Amount__c</fullName>
    <label>Total Adjusted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>