force-app/main/default/objects/Claim__c/fields/TotalClaimedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalClaimedAmount__c</fullName>
    <label>Total Claimed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>